--- a/code.css
+++ b/code.css
@@ -1,6 +1,11 @@
 body {
   background-color: rosybrown;
   font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh; 
+  margin: 0;
 }
 
 p {
@@ -17,15 +22,14 @@ a:hover {
 }
 
 .business-card {
-  display: flecbox;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  height: 50vw;
+  align-items: center; 
   background-color: #f3f3f3;
   width: 300px;
   padding: 20px;
   margin: auto;
-  margin-top: 100px;
   text-align: center;
   font-size: 16px;
   border: 3px solid rgb(69, 69, 69);
